test/ref.ruse
// fail

fn main() int {
    var a int
    var b = &a
    &&a // error
    *a // error
    &(*b)
    a + b // error
}
